@@ -1,31 +1,0 @@
-#! /bin/sh
-# This script takes one argument.
-
-trap 'rm -fr $tmpfiles' 1 2 3 15
-
-LANGUAGE=
-LC_ALL=
-LC_MESSAGES=
-LANG=
-export LANGUAGE LC_ALL LC_MESSAGES LANG
-
-tmpfiles="hello-test2.ok"
-cat <<EOF > hello-test2.ok
-Nothing happens here.
-EOF
-
-tmpfiles="$tmpfiles hello-test2.out"
-: ${HELLO=hello}
-${HELLO} sailor > hello-test2.out
-
-# $HELLO > test.out
-# $HELLO sailor >> test.out
-# $HELLO --traditional >> test.out
-
-: ${DIFF=diff}
-${DIFF} hello-test2.ok hello-test2.out
-result=$?
-
-rm -f $tmpfiles
-
-exit $result
