@@ -1,33 +1,0 @@
-#! /bin/sh
-# This script takes one argument.
-
-trap 'rm -fr $tmpfiles' 1 2 3 15
-
-LANGUAGE=
-LC_ALL=
-LC_MESSAGES=
-LANG=
-export LANGUAGE LC_ALL LC_MESSAGES LANG
-
-tmpfiles="hello-test3.ok"
-cat <<EOF > hello-test3.ok
-hello, world
-EOF
-
-tmpfiles="$tmpfiles hello-test3.out"
-: ${HELLO=hello}
-${HELLO} --traditional > hello-test3.out
-
-# $HELLO > test.out
-# $HELLO sailor >> test.out
-# $HELLO --traditional >> test.out
-
-: ${DIFF=diff}
-${DIFF} hello-test3.ok hello-test3.out
-result=$?
-
-rm -f $tmpfiles
-
-exit $result
-
-# hello ends here
